[gd_scene load_steps=4 format=3 uid="uid://wglrmlyx6v4g"]

[ext_resource type="Script" path="res://Screens/win_screen.gd" id="1_tqlt4"]
[ext_resource type="Texture2D" uid="uid://dlpfq8ljg2w8r" path="res://Assets/Menu/you_win.png" id="2_gki4u"]
[ext_resource type="Theme" uid="uid://di1s2ewmo5emu" path="res://Assets/main_ui.tres" id="3_miv4v"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_tqlt4")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_gki4u")
expand_mode = 3

[node name="exit_text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = 118.0
offset_right = 250.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_miv4v")
theme_override_font_sizes/font_size = 35
text = "Press 'SPACE' to continue"

[node name="game_over_title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -678.0
offset_top = -125.0
offset_right = 678.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_miv4v")
theme_override_font_sizes/font_size = 250
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="exit_timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
